--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "drizzle-kit generate:pg"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
+    "pg": "^8.11.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,6 +38,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/pg": "^8.10.2",
     "drizzle-kit": "^0.19.13"
   }
 }
