--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "drizzle-kit generate:pg"
+    "generate": "drizzle-kit generate:pg",
+    "migrate": "ts-node-esm src/db/migrate.ts",
+    "push": "drizzle-kit push:pg",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/core": "^0.14.0",
+    "@auth/drizzle-adapter": "^0.3.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -22,11 +31,13 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.276.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
@@ -39,6 +50,7 @@
   },
   "devDependencies": {
     "@types/pg": "^8.10.2",
-    "drizzle-kit": "^0.19.13"
+    "drizzle-kit": "^0.19.13",
+    "ts-node": "^10.9.1"
   }
 }
