--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 # POSTGRES_URL='postgres://default:8wsELoAX4vIj@ep-calm-grass-68529627.us-east-1.postgres.vercel-storage.com:5432/verceldb'
-# POSTGRES_URL='postgres://postgres:password@localhost:5432/sam-mroz'
-POSTGRES_URL='postgres://postgres:password@localhost:5433/sam-mroz'
+POSTGRES_URL='postgres://postgres:password@localhost:5432/sam-mroz'
+# POSTGRES_URL='postgres://postgres:password@localhost:5433/sam-mroz'
 DISCORD_CLIENT_ID='1091034171461357650'
 DISCORD_CLIENT_SECRET='hrW4bx9_vD9frqoX0yxe2Dj9mgW3E0RV'
 NEXTAUTH_URL='http://localhost:3000'
 NEXTAUTH_SECRET='+FYKEkTBMI93qUvOR+BYrFMJ30mS8D8sK7oVlLvSOJA='
+AWS_ACCESS_KEY_ID='AKIAZ5BFIBLFL5DFXLNQ'
+AWS_SECRET_ACCESS_KEY='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'
+AWS_BUCKET_NAME='sam-mroz'
