--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@auth/core": "^0.14.0",
     "@auth/drizzle-adapter": "^0.3.2",
+    "@aws-sdk/client-s3": "^3.414.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
