--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # POSTGRES_URL='postgres://default:8wsELoAX4vIj@ep-calm-grass-68529627.us-east-1.postgres.vercel-storage.com:5432/verceldb'
 # POSTGRES_URL='postgres://postgres:password@localhost:5432/sam-mroz'
+NODE_ENV="development"
 POSTGRES_URL='postgres://postgres:password@localhost:5433/sam-mroz'
 DISCORD_CLIENT_ID='1091034171461357650'
 DISCORD_CLIENT_SECRET='hrW4bx9_vD9frqoX0yxe2Dj9mgW3E0RV'
