--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "drizzle-kit": "^0.19.13"
   },
   "devDependencies": {
     "@types/pg": "^8.10.2",
-    "drizzle-kit": "^0.19.13",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "ts-node": "^10.9.1"
