--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "drizzle-kit": "^0.19.13"
+    "drizzle-kit": "^0.19.13",
+    "@types/pg": "^8.10.2"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "ts-node": "^10.9.1"
