--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.6.0",
+    "@types/pg": "^8.10.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.13",
     "drizzle-orm": "^0.28.6",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -49,9 +52,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
-    "drizzle-kit": "^0.19.13",
-    "@types/pg": "^8.10.2"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
