--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate": "drizzle-kit generate:pg",
     "migrate": "ts-node-esm src/db/migrate.ts",
     "push": "drizzle-kit push:pg",
+    "prod-push": "POSTGRES_URL='postgres://default:8wsELoAX4vIj@ep-calm-grass-68529627.us-east-1.postgres.vercel-storage.com:5432/verceldb?sslmode=require' drizzle-kit push:pg",
     "prod-studio": "POSTGRES_URL='postgres://default:8wsELoAX4vIj@ep-calm-grass-68529627.us-east-1.postgres.vercel-storage.com:5432/verceldb?sslmode=require' drizzle-kit studio",
     "studio": "drizzle-kit studio"
   },
@@ -50,6 +51,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
