alex story page project test

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 # POSTGRES_URL='postgres://postgres:password@localhost:5432/sam-mroz'
 # NODE_ENV="production"
 NODE_ENV="development"
-POSTGRES_URL='postgres://postgres:password@localhost:5433/sam-mroz'
+POSTGRES_URL='postgres://postgres:password@localhost:5432/sam_mroz'
+# POSTGRES_URL='postgres://postgres:password@localhost:5433/sam-mroz'
 DISCORD_CLIENT_ID='1091034171461357650'
 DISCORD_CLIENT_SECRET='hrW4bx9_vD9frqoX0yxe2Dj9mgW3E0RV'
 NEXTAUTH_URL='http://localhost:3000'
