--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
+    "quill-image-uploader": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
